@@ -37,6 +37,7 @@
 #include <fcntl.h>
 #include <errno.h>
 #include <stdlib.h>
+#include <signal.h>
 
 #ifdef __sgi
 #   include <sys/schedctl.h>
@@ -276,6 +277,7 @@ char *err_str
    lListElem *env;
    lList *environmentList = NULL;
    const char *arch = sge_get_arch();
+   sigset_t sigset, sigset_oset;
 
    int write_osjob_id = 1;
 
@@ -1415,6 +1417,25 @@ char *err_str
       return -2;
    }
 
+   {
+
+      /* 
+       * Add the signals to the set of blocked signals. Save previous signal 
+       * mask. We do this before the fork() to avoid any race conditions with
+       * signals being immediately sent to the shepherd after the fork.
+       * After the fork we  need to restore the oldsignal mask in the execd
+       */
+      sigemptyset(&sigset);
+      sigaddset(&sigset, SIGTTOU);
+      sigaddset(&sigset, SIGTTIN);
+      sigaddset(&sigset, SIGUSR1);
+      sigaddset(&sigset, SIGUSR2);
+      sigaddset(&sigset, SIGCONT);
+      sigaddset(&sigset, SIGWINCH);
+      sigaddset(&sigset, SIGTSTP);
+      sigprocmask(SIG_BLOCK, &sigset, &sigset_oset);
+   }
+
    /* now fork and exec the shepherd */
    if (getenv("SGE_FAILURE_BEFORE_FORK") || getenv("SGE_FAILURE_BEFORE_FORK")) {
       i = -1;
@@ -1423,6 +1444,8 @@ char *err_str
       i = fork();
 
    if (i != 0) { /* parent */
+      sigprocmask(SIG_SETMASK, &sigset_oset, NULL);
+
       if(petep == NULL) {
          /* nothing to be done for petasks: We do not signal single petasks, but always the whole jatask */
          lSetUlong(jep, JB_hard_wallclock_gmt, 0); /* in case we are restarting! */
