@@ -1,3 +1,8 @@
+EB-2004-05-12-0: Bugfix:    qdel of just submitted job
+                 Issues:    126
+                 Changed:   sge_execd
+                 Review:    JG 
+
 JG-2004-05-12-0: Testsuite: Fixed test system_tests/clients/qmod/reschedule.
                             Worked around parsing unfriendly output of 
                             qstat -g t for parallel jobs.
